final group changes

--- a/FIREMNÉ VEČIERKY/AJAX.html
+++ b/FIREMNÉ VEČIERKY/AJAX.html
@@ -102,36 +102,31 @@
       <div class="col m3">
         <a href="služby-firemné.html" class="button block black">SLUZBY</a>
       </div>
+      <div class="col m3">
+        <a href="Formulár.html" class="button block black">FORM</a>
+      </div>
     </div>
   </div>
 
 
-  <div class="row-padding padding-16 center" >
+
+  <div class="row-padding padding-16 " >
+
     <div class="quarter quarter-20">
-      <img src="img/%20-2.jpg" alt="Photo" style="width:100%">
-      <h3>KIKO</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-    <div class="quarter quarter-20">
-      <img src="img/%20-2.jpg" alt="photo" style="width:100%">
+      <img src="../CAR/NATY.png" alt="photo" style="width:100%">
       <h3>NATY</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <p>Volám sa Natália Gonosová a na tejto stránke som sa venovala stužkovím.</p>
     </div>
     <div class="quarter quarter-20">
-      <img src="img/man.jpg" alt="photo" style="width:100%">
+      <img src="../CAR/KIKO.png" alt="Photo" style="width:100%">
+      <h3>KIKO</h3>
+      <p>Volám sa Kristián Štefanka a na tejto stránke som sa venovala svadbám.</p>
+    </div>
+    <div class="quarter quarter-20">
+      <img src="../CAR/NIKA.png" alt="photo" style="width:100%">
       <h3>NIKI</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-      <p>What else?</p>
-    </div>
-    <div class="quarter quarter-20">
-      <img src="img/man.jpg" alt="photo" style="width:100%">
-      <h3>DORY</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-    <div class="quarter quarter-20">
-      <img src="img/man.jpg" alt="photo" style="width:100%">
-      <h3>DIDY</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <p>Volám sa Nikol Kurucová a na tejto stránke som sa venovala firemným večierkom.</p>
+
     </div>
   </div>
 </div>
