--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -83,15 +83,18 @@
             <div class="col m3">
                 <a href="služby-firemné.html" class="button block black">SLUZBY</a>
             </div>
+          <div class="col m3">
+            <a href="Formulár.html" class="button block black">FORM</a>
+          </div>
         </div>
     </div>
 
     <!-- About Container -->
     <div class="container" id="about">
         <div class="content" style="max-width:700px">
-            <h5 class="center padding-64"><span class="tag wide">ABOUT</span></h5>
+            <h5 class="center padding-24"><span class="tag wide">ABOUT</span></h5>
             <p>
-            <h1><b>Soiree Specialist</b></h1> je vaším spoľahlivým partnerom pri organizovaní firemných večierkov, ktoré rozpália váš zmysel pre
+            <h1><b>Firemné Večierky Specialist</b></h1> je vaším spoľahlivým partnerom pri organizovaní firemných večierkov, ktoré rozpália váš zmysel pre
             zábavu a potešia vaše zamestnancov."
             </p>
 
@@ -115,40 +118,8 @@
                 Spoločne vytvoríme večer, na ktorý sa vaši zamestnanci nezabudnuteľne budú spomínať!
             </b></p>
 
-            <h5 class="center padding-24"><span class="tag wide">NÁŠ TÝM</span></h5>
-
-        </div>
-    </div>
 
 
-    <!-- Contact -->
-
-    <div class="row-padding padding-16 center" >
-        <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="Photo" style="width:100%">
-            <h3>KIKO</h3>
-            <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="photo" style="width:100%">
-            <h3>NATY</h3>
-            <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="photo" style="width:100%">
-            <h3>NIKI</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-            <p>What else?</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="photo" style="width:100%">
-            <h3>DORY</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="photo" style="width:100%">
-            <h3>DIDY</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
     </div>
 
