--- a/hlavná stránka.html
+++ b/hlavná stránka.html
@@ -89,7 +89,7 @@
                   Naša široká sieť dodávateľov a kontakty vám zabezpečia tie najlepšie služby a dekorácie pre vašu udalosť.
                 </i></p>
             </div>
-            <img src="img/index/img2.jpg" style="width:100%;max-width:1000px" class="margin-top">
+            <img src="FIREMNÉ%20VEČIERKY/img/index-firemné/img4.jpg" style="width:100%;max-width:1000px" class="margin-top">
             <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
             <p><b>
               Nech snívate o romantickom sobáši pod holým nebom alebo o extravagantnom večierku v štýle Gatsbyho,
@@ -100,39 +100,31 @@
             <h5 class="center padding-24"><span class="tag wide">NÁŠ TÝM</span></h5>
 
         </div>
-    </div>
 
+
+    </div>
 
     <!-- Contact -->
+  <div class="row-padding padding-16 " >
 
-    <div class="row-padding padding-16 center" >
-        <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="Photo" style="width:100%">
-            <h3>KIKO</h3>
-            <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/%20-2.jpg" alt="photo" style="width:100%">
-            <h3>NATY</h3>
-            <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="photo" style="width:100%">
-            <h3>NIKI</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-            <p>What else?</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="photo" style="width:100%">
-            <h3>DORY</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-        <div class="quarter quarter-20">
-            <img src="img/man.jpg" alt="photo" style="width:100%">
-            <h3>DIDY</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
+    <div class="quarter quarter-20">
+      <img src="CAR/NATY.png" alt="photo" style="width:100%">
+      <h3>NATY</h3>
+      <p>Volám sa Natália Gonosová a na tejto stránke som sa venovala stužkovím.</p>
     </div>
+    <div class="quarter quarter-20">
+      <img src="CAR/KIKO.png" alt="Photo" style="width:100%">
+      <h3>KIKO</h3>
+      <p>Volám sa Kristián Štefanka a na tejto stránke som sa venovala svadbám.</p>
+    </div>
+    <div class="quarter quarter-20">
+      <img src="CAR/NIKA.png" alt="photo" style="width:100%">
+      <h3>NIKI</h3>
+<p>Volám sa Nikol Kurucová a na tejto stránke som sa venovala firemným večierkom.</p>
+
+    </div>
+  </div>
+
 
     <!-- End page content -->
 
