final group changes

--- a/hlavná stránka.html
+++ b/hlavná stránka.html
@@ -35,7 +35,7 @@
   </a>
   <ul class="nav">
     <li class="nav-item">
-      <a class="active" href="#">Weddings</a>
+      <a href="SVADBA/hlavna-svadba.html">Weddings</a>
     </li>
 
     <li class="nav-item">
@@ -43,7 +43,7 @@
     </li>
 
     <li class="nav-item">
-      <a href="../FIREMNÉ%20VEČIERKY/hlavná-firemná.html">Company Parties</a>
+      <a href="FIREMNÉ%20VEČIERKY/hlavná-firemná.html">Company Parties</a>
     </li>
 
     <li class="nav-item">
@@ -51,7 +51,7 @@
     </li>
 
     <li class="nav-item">
-      <a href="../STUŽKOVÁ/hlavna-stuzkove.html">Ribbons</a>
+      <a href="STUŽKOVÁ/hlavna-stuzkove.html">Ribbons</a>
     </li>
   </ul>
 </header>
