--- a/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
+++ b/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
@@ -3,10 +3,10 @@
 <head>
   <header class="header">
     <a href="../hlavná%20stránka.html">
-      <img class="logo" src="../logo/logo1.png" alt="Apple Logo">
+      <img style="width: 40px !important;
+              height: 50px !important;" class="logo" src="../logo/logo1.png" alt="Apple Logo">
     </a>
-         style="width: 40px !important;
-              height: 50px !important;">
+
     <ul class="nav">
       <li class="nav-item">
         <a href="../SVADBA/svadba.html">Svadby</a>
